--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>"Hello, World!" --some computer</h1>
         <p><b><i id="biblepassage"></i></b></p>
         <div id="search-bar">
-            <input type="text" id="search-input" placeholder="Search Sparksammy">
+            <input type="text" id="search-input" placeholder="Search Brave">
             <button id="search-button">Search</button>
         </div>
 
