--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <a href="https://www.youtube.com/c/TechLead">The TechLead</a>
           <a href="https://www.youtube.com/c/fireship">Fireship</a>
           <a href="https://www.youtube.com/c/NoBoilerplate">No Boilerplate</a>
+          <a href="https://www.youtube.com/channel/UCtxtp2rjee55dBwzcjRcNVQ">The OnioNode</a>
         </p>
 
         <h3>Great Stuff</h3>
