--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 
         <h3>Great Stuff</h3>
         <p>
-            <a href="https://github.com/Sneed-Group">Sneed Group Git</a>
+            <a href="https://sneedgit.nodemixaholic.com">Sneed Group Git</a>
+            <a href="https://sneed-group.github.io/">Sneed Group Site</a>
             <a href="http://nodemixaholic.com">NodeMixaholic.com</a>
         </p>
         
